Modernize oidc-next Java usage